# info

./: readme.md
info/: CMakeLists.txt  info.bat  makefile
info/res/: resource.rc
info/src/: main.cc
